Ci/CD for helix-dynamic-workunit

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -22,9 +22,11 @@ on:
     # Publish only on `master`
     branches:
       - master
+      - helix-dynamic-workunit
   pull_request:
     branches:
       - master
+      - helix-dynamic-workunit
   release:
     types: [published, edited]
 
