--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -174,5 +174,5 @@ jobs:
         uses: codecov/codecov-action@v2
         with:
           files: ${{ env.jacoco_reports }}
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           verbose: true
