--- a/gobblin-cluster/build.gradle
+++ b/gobblin-cluster/build.gradle
@@ -47,6 +47,8 @@ dependencies {
   compile externalDependency.hadoopCommon
   compile externalDependency.avroMapredH2
   compile externalDependency.findBugsAnnotations
+  compile externalDependency."temporal-sdk"
+  compile externalDependency."temporal-testing"
   compile (externalDependency.helix) {
     exclude group: 'io.dropwizard.metrics', module: 'metrics-core'
   }
@@ -56,6 +58,7 @@ dependencies {
 
   testCompile project(":gobblin-example")
 
+  testCompile externalDependency."temporal-testing"
   testCompile externalDependency.testng
   testCompile externalDependency.curatorFramework
   testCompile externalDependency.curatorTest
