--- a/gradle/scripts/dependencyDefinitions.gradle
+++ b/gradle/scripts/dependencyDefinitions.gradle
@@ -102,6 +102,7 @@ ext.externalDependency = [
     "zkClient": "com.101tec:zkclient:0.7",
     "quartz": "org.quartz-scheduler:quartz:2.2.3",
     "temporal-sdk": "io.temporal:temporal-sdk:1.20.0",
+    "temporal-testing": "io.temporal:temporal-testing:1.20.0",
     "testng": "org.testng:testng:6.14.3",
     "junit": "junit:junit:4.13.2",
     "mockserver":"org.mock-server:mockserver-netty:3.10.4",
