--- a/settings.gradle
+++ b/settings.gradle
@@ -32,6 +32,7 @@ def modules = ['gobblin-admin',
                'gobblin-modules',
                'gobblin-rest-service',
                'gobblin-runtime',
+               'gobblin-temporal',
                'gobblin-runtime-hadoop',
                'gobblin-utility',
                'gobblin-salesforce',
